--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "commander": "3.0.2",
     "fs-extra": "8.1.0",
+    "globby": "10.0.1",
     "readline-sync": "1.4.10"
   }
 }
