Cleanup, new validation

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "active-rename",
   "version": "1.0.0",
   "description": "Interactive file renamer inspired by git",
-  "main": "index.js",
+  "main": "./src/index.js",
   "bin": {
-    "arm": "./index.js"
+    "arm": "./src/index.js"
   },
   "engines": {
     "node": ">=10.x"
@@ -35,11 +35,13 @@
     "eslint-plugin-import": "2.18.2"
   },
   "dependencies": {
+    "chalk": "2.4.2",
     "commander": "3.0.2",
     "fs-extra": "8.1.0",
     "gitconfig": "2.0.8",
     "globby": "10.0.1",
     "open": "6.4.0",
+    "promise.allsettled": "1.0.1",
     "readline-sync": "1.4.10",
     "tmp": "0.1.0"
   }
