--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,6 @@
     "max-len": 0,
     "strict": [2, "global"],
     "@typescript-eslint/no-use-before-define": 0,
-    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/explicit-function-return-type": 0
   }
 }
