--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
     "eslint-plugin-import": "2.18.2"
   },
   "dependencies": {
+    "@types/git-config-path": "2.0.0",
+    "@types/ini": "1.3.30",
     "@types/promise.allsettled": "1.0.1",
     "chalk": "2.4.2",
     "commander": "3.0.2",
     "fs-extra": "8.1.0",
-    "gitconfig": "2.0.8",
+    "git-config-path": "2.0.0",
     "globby": "10.0.1",
+    "ini": "1.3.5",
     "open": "6.4.0",
     "promise.allsettled": "1.0.1",
     "readline-sync": "1.4.10",
