--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,16 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:jest/recommended",
+    "plugin:jest/style"
   ],
   "parser": "@typescript-eslint/parser",
+  "plugins": ["jest"],
   "env": {
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest/globals": true
   },
   "rules": {
     "arrow-parens": 0,
@@ -21,6 +25,7 @@
     "max-len": 0,
     "strict": [2, "global"],
     "@typescript-eslint/no-use-before-define": 0,
-    "@typescript-eslint/explicit-function-return-type": 0
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "jest/no-jest-import": 0
   }
 }
