--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "tsc -w",
     "dist": "tsc",
     "prepublishOnly": "npm run lint && npm run dist",
-    "lint": "eslint --format=node_modules/eslint-codeframe-formatter ./src/**/*.ts",
+    "lint": "eslint --format=node_modules/eslint-codeframe-formatter ./{src,tests}/**/*.ts",
     "test": "jest"
   },
   "repository": {
@@ -49,6 +49,7 @@
     "eslint": "6.5.1",
     "eslint-codeframe-formatter": "1.0.2",
     "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.19.0",
     "jest": "24.9.0",
     "mock-fs": "4.10.2",
     "ts-jest": "24.1.0"
