--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install and test
+    - name: npm install, lint and test
       run: |
         npm ci
-        npm test
+        npm run lint
+        npm run test-ci
       env:
         CI: true
