--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "cacheDirectory": "./node_modules/.cache/jest"
   },
   "devDependencies": {
-    "@types/fs-extra": "8.0.0",
+    "@types/fs-extra": "8.0.1",
     "@types/jest": "24.0.19",
     "@types/mock-fs": "3.6.30",
     "@types/tmp": "0.1.0",
-    "@typescript-eslint/eslint-plugin": "2.4.0",
-    "@typescript-eslint/parser": "2.4.0",
+    "@typescript-eslint/eslint-plugin": "2.5.0",
+    "@typescript-eslint/parser": "2.5.0",
     "eslint": "6.5.1",
     "eslint-codeframe-formatter": "1.0.2",
     "eslint-plugin-import": "2.18.2",
@@ -64,9 +64,9 @@
     "git-config-path": "2.0.0",
     "globby": "10.0.1",
     "ini": "1.3.5",
-    "open": "6.4.0",
     "readline-sync": "1.4.10",
     "tmp": "0.1.0",
+    "trash": "6.0.0",
     "typescript": "3.6.4"
   },
   "keywords": [
