--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
     "strict": [2, "global"],
     "@typescript-eslint/no-use-before-define": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-explicit-any": 0,
     "jest/no-jest-import": 0
   }
 }
