--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "@typescript-eslint/no-use-before-define": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/triple-slash-reference": 0,
     "jest/no-jest-import": 0
   }
 }
