--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
   },
   "devDependencies": {
     "@types/fs-extra": "8.0.1",
-    "@types/jest": "24.0.19",
-    "@types/mock-fs": "3.6.30",
+    "@types/jest": "24.0.20",
+    "@types/mock-fs": "4.10.0",
     "@types/tmp": "0.1.0",
     "@typescript-eslint/eslint-plugin": "2.5.0",
     "@typescript-eslint/parser": "2.5.0",
-    "eslint": "6.5.1",
+    "eslint": "6.6.0",
     "eslint-codeframe-formatter": "1.0.2",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "22.19.0",
+    "eslint-plugin-jest": "22.20.0",
     "jest": "24.9.0",
     "minimatch": "3.0.4",
     "mock-fs": "4.10.2",
@@ -60,11 +60,11 @@
     "@types/ini": "1.3.30",
     "chalk": "2.4.2",
     "commander": "3.0.2",
+    "delete-empty": "3.0.0",
     "fs-extra": "8.1.0",
     "git-config-path": "2.0.0",
     "globby": "10.0.1",
     "ini": "1.3.5",
-    "readline-sync": "1.4.10",
     "tmp": "0.1.0",
     "trash": "6.0.0",
     "typescript": "3.6.4"
