--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@types/git-config-path": "2.0.0",
     "@types/ini": "1.3.30",
+    "@types/normalize-path": "3.0.0",
     "chalk": "2.4.2",
     "commander": "3.0.2",
     "delete-empty": "3.0.0",
@@ -35,6 +36,7 @@
     "git-config-path": "2.0.0",
     "globby": "10.0.1",
     "ini": "1.3.5",
+    "normalize-path": "3.0.0",
     "tmp": "0.1.0",
     "trash": "6.0.0",
     "typescript": "3.6.4"
