--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,10 @@ jobs:
       with:
         node-version: 10.x
     - name: npm install, lint and test
+      shell: bash
       run: |
         npm ci
         npm run lint
+        npm run test-once
       env:
         CI: true
