--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prepublishOnly": "npm run validate && npm run dist",
     "start": "tsc -w",
     "test": "jest --watch",
-    "test-once": "jest --runInBand",
+    "test-once": "jest",
     "validate": "npm run lint && npm run test-once"
   },
   "dependencies": {
