--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imv",
   "description": "Interactive file mover inspired by git",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "license": "MIT",
   "author": "Rob Crocombe <me@robcrocombe.com> (http://robcrocombe.com)",
   "homepage": "https://github.com/robcrocombe/imv#readme",
@@ -26,9 +26,6 @@
     "validate": "npm run lint && npm run test-once"
   },
   "dependencies": {
-    "@types/git-config-path": "2.0.0",
-    "@types/ini": "1.3.30",
-    "@types/normalize-path": "3.0.0",
     "chalk": "2.4.2",
     "commander": "4.0.1",
     "delete-empty": "3.0.0",
@@ -38,14 +35,16 @@
     "ini": "1.3.5",
     "normalize-path": "3.0.0",
     "tmp": "0.1.0",
-    "trash": "6.0.0",
-    "typescript": "3.6.4"
+    "trash": "6.0.0"
   },
   "devDependencies": {
     "@jest/test-sequencer": "24.9.0",
     "@types/fs-extra": "8.0.1",
-    "@types/jest": "24.0.22",
+    "@types/git-config-path": "2.0.0",
+    "@types/ini": "1.3.30",
+    "@types/jest": "24.0.23",
     "@types/mock-fs": "4.10.0",
+    "@types/normalize-path": "3.0.0",
     "@types/rimraf": "2.0.3",
     "@types/tmp": "0.1.0",
     "@typescript-eslint/eslint-plugin": "2.6.1",
@@ -60,7 +59,8 @@
     "minimatch": "3.0.4",
     "prettier": "1.19.1",
     "rimraf": "3.0.0",
-    "ts-jest": "24.1.0"
+    "ts-jest": "24.1.0",
+    "typescript": "3.6.4"
   },
   "keywords": [
     "directory",
