--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,6 @@
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/triple-slash-reference": 0,
-    "jest/no-jest-import": 0
+    "@typescript-eslint/triple-slash-reference": 0
   }
 }
