--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "trash": "7.1.1"
   },
   "devDependencies": {
-    "@jest/test-sequencer": "24.9.0",
+    "@jest/test-sequencer": "27.0.4",
     "@types/fs-extra": "8.1.0",
     "@types/git-config-path": "2.0.0",
     "@types/ini": "1.3.30",
-    "@types/jest": "24.0.23",
+    "@types/jest": "26.0.23",
     "@types/mock-fs": "4.10.0",
     "@types/normalize-path": "3.0.0",
     "@types/rimraf": "2.0.3",
@@ -54,12 +54,12 @@
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jest": "24.3.6",
     "husky": "3.0.9",
-    "jest": "24.9.0",
+    "jest": "27.0.4",
     "lint-staged": "9.4.3",
     "minimatch": "3.0.4",
     "prettier": "1.19.1",
     "rimraf": "3.0.0",
-    "ts-jest": "24.1.0",
+    "ts-jest": "27.0.2",
     "typescript": "3.9.7"
   },
   "keywords": [
@@ -92,14 +92,15 @@
   },
   "jest": {
     "preset": "ts-jest",
+    "rootDir": "./tests",
     "cacheDirectory": "./node_modules/.cache/jest",
     "setupFilesAfterEnv": [
-      "./tests/setup.ts"
+      "<rootDir>/setup.ts"
     ],
     "watchPathIgnorePatterns": [
-      "<rootDir>/tests/temp"
+      "<rootDir>/temp"
     ],
-    "testSequencer": "./tests/sequencer.js"
+    "testSequencer": "<rootDir>/sequencer.js"
   },
   "prettier": {
     "printWidth": 100,
