--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imv",
   "description": "Interactive file mover inspired by git",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "license": "MIT",
   "author": "Rob Crocombe <me@robcrocombe.com> (http://robcrocombe.com)",
   "homepage": "https://github.com/robcrocombe/imv#readme",
@@ -26,41 +26,40 @@
     "validate": "npm run lint && npm run test-once"
   },
   "dependencies": {
-    "chalk": "2.4.2",
-    "commander": "4.0.1",
+    "chalk": "4.1.1",
+    "commander": "7.2.0",
     "delete-empty": "3.0.0",
-    "fs-extra": "8.1.0",
+    "fs-extra": "9.1.0",
     "git-config-path": "2.0.0",
-    "globby": "10.0.1",
-    "ini": "1.3.5",
+    "globby": "11.0.3",
+    "ini": "2.0.0",
     "normalize-path": "3.0.0",
-    "tmp": "0.1.0",
-    "trash": "6.0.0"
+    "tmp": "0.2.1",
+    "trash": "7.1.1"
   },
   "devDependencies": {
-    "@jest/test-sequencer": "24.9.0",
-    "@types/fs-extra": "8.0.1",
-    "@types/git-config-path": "2.0.0",
+    "@jest/test-sequencer": "27.0.4",
+    "@types/fs-extra": "8.1.0",
+    "@types/git-config-path": "2.0.1",
     "@types/ini": "1.3.30",
-    "@types/jest": "24.0.23",
-    "@types/mock-fs": "4.10.0",
+    "@types/jest": "26.0.23",
     "@types/normalize-path": "3.0.0",
-    "@types/rimraf": "2.0.3",
-    "@types/tmp": "0.1.0",
-    "@typescript-eslint/eslint-plugin": "2.6.1",
-    "@typescript-eslint/parser": "2.6.1",
-    "eslint": "6.6.0",
+    "@types/rimraf": "3.0.0",
+    "@types/tmp": "0.2.0",
+    "@typescript-eslint/eslint-plugin": "4.26.0",
+    "@typescript-eslint/parser": "4.26.0",
+    "eslint": "7.28.0",
     "eslint-codeframe-formatter": "1.0.2",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "23.0.3",
-    "husky": "3.0.9",
-    "jest": "24.9.0",
-    "lint-staged": "9.4.3",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jest": "24.3.6",
+    "husky": "6.0.0",
+    "jest": "27.0.4",
+    "lint-staged": "11.0.0",
     "minimatch": "3.0.4",
     "prettier": "1.19.1",
-    "rimraf": "3.0.0",
-    "ts-jest": "24.1.0",
-    "typescript": "3.6.4"
+    "rimraf": "3.0.2",
+    "ts-jest": "27.0.2",
+    "typescript": "3.9.7"
   },
   "keywords": [
     "directory",
@@ -92,14 +91,15 @@
   },
   "jest": {
     "preset": "ts-jest",
+    "rootDir": "./tests",
     "cacheDirectory": "./node_modules/.cache/jest",
     "setupFilesAfterEnv": [
-      "./tests/setup.ts"
+      "<rootDir>/setup.ts"
     ],
     "watchPathIgnorePatterns": [
-      "<rootDir>/tests/temp"
+      "<rootDir>/temp"
     ],
-    "testSequencer": "./tests/sequencer.js"
+    "testSequencer": "<rootDir>/sequencer.js"
   },
   "prettier": {
     "printWidth": 100,
